# gnulib-maint-tools

./: .gitignore  README  code-search.txt  darwin-macos.txt  end-of-life.txt  posix-2024-doc.TODO  posix-2024-impl.TODO
gnulib-tool-tests/: README  init.sh  test-all.sh
gnulib-tool-tests/create-tests/: test-all.sh  test-create-megatestdir-1.args  test-create-megatestdir-1.err  test-create-megatestdir-1.out  test-create-megatestdir-1.sh  test-create-megatestdir-2.args  test-create-megatestdir-2.err  test-create-megatestdir-2.out  test-create-megatestdir-2.sh  test-create-testdir-1.args  test-create-testdir-1.err  test-create-testdir-1.out  test-create-testdir-1.sh  test-create-testdir-2.args  test-create-testdir-2.err  test-create-testdir-2.out  test-create-testdir-2.sh  test-create-testdir-3.args  test-create-testdir-3.out  test-create-testdir-3.sh  test-create-testdir-4.args  test-create-testdir-4.err  test-create-testdir-4.out  test-create-testdir-4.sh
gnulib-tool-tests/create-tests/test-create-megatestdir-1.result/: configure.ac
gnulib-tool-tests/create-tests/test-create-megatestdir-2.result/: Makefile.am  Makefile.in  configure  do-autobuild
gnulib-tool-tests/create-tests/test-create-testdir-1.result/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gnulib-tool-tests/create-tests/test-create-testdir-2.result/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gnulib-tool-tests/create-tests/test-create-testdir-3.result/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gnulib-tool-tests/create-tests/test-create-testdir-3.result/gllib/: Makefile.am  Makefile.in
gnulib-tool-tests/create-tests/test-create-testdir-3.result/glm4/: Makefile.am  Makefile.in
gnulib-tool-tests/create-tests/test-create-testdir-3.result/gltests/: Makefile.am  Makefile.in
gnulib-tool-tests/create-tests/test-create-testdir-4.result/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure.ac
gnulib-tool-tests/import-tests/: README  test-all.sh  test-cache-1-1.sh  test-cache-1-10.sh  test-cache-1-11.sh  test-cache-1-12.out  test-cache-1-12.sh  test-cache-1-13.out  test-cache-1-13.sh  test-cache-1-14.out  test-cache-1-14.sh  test-cache-1-15.sh  test-cache-1-16.sh  test-cache-1-17.out  test-cache-1-17.sh  test-cache-1-18.sh  test-cache-1-19.sh  test-cache-1-2.sh  test-cache-1-20.sh  test-cache-1-21.sh  test-cache-1-22.sh  test-cache-1-23.out  test-cache-1-23.sh  test-cache-1-24.sh  test-cache-1-25.sh  test-cache-1-26.sh  test-cache-1-27.sh  test-cache-1-28.sh  test-cache-1-29.out  test-cache-1-29.sh  test-cache-1-3.sh  test-cache-1-30.out  test-cache-1-30.sh  test-cache-1-31.sh  test-cache-1-32.sh  test-cache-1-33.sh  test-cache-1-34.sh  test-cache-1-4.out  test-cache-1-4.sh  test-cache-1-5.sh  (+107 more)
gnulib-tool-tests/import-tests/mock-bin/: wget
gnulib-tool-tests/import-tests/test-cache-1-23.result/: configure.ac
gnulib-tool-tests/import-tests/test-cache-2-17.result/: Makefile.am
gnulib-tool-tests/import-tests/test-cache-2-31.result/: configure.ac
gnulib-tool-tests/import-tests/test-cache-2-31.result/lib/: Makefile.gnulib
gnulib-tool-tests/import-tests/test-cache-2-31.result/m4/: gnulib-cache.m4
gnulib-tool-tests/import-tests/test-cache-2-31.result/po/: Makevars
gnulib-tool-tests/import-tests/test-cache-2-31.result/tests/: Makefile.gnulib
gnulib-tool-tests/import-tests/test-coreutils-1.result/: .gitignore  .gitignore~  GNUmakefile  maint.mk
gnulib-tool-tests/import-tests/test-emacs-1.result/: .gitignore  aclocal.m4
gnulib-tool-tests/import-tests/test-oath-toolkit-1.result/: .gitignore
gnulib-tool-tests/import-tests/test-oath-toolkit-4.result/: .gitignore
gnulib-tool-tests/import-tests/test-wget2-1.result/: .gitignore  .gitignore~
gnulib-tool-tests/info-tests/: test-all.sh  test-extract-applicability-1.args  test-extract-applicability-2.args  test-extract-autoconf-snippet-1.args  test-extract-autoconf-snippet-1.output  test-extract-autoconf-snippet-2.args  test-extract-autoconf-snippet-3.args  test-extract-autoconf-snippet-3.output  test-extract-automake-snippet-1.args  test-extract-automake-snippet-1.output  test-extract-automake-snippet-2.args  test-extract-automake-snippet-2.output  test-extract-automake-snippet-3.args  test-extract-automake-snippet-3.output  test-extract-comment-1.args  test-extract-comment-2.args  test-extract-comment-2.output  test-extract-dependencies-1.args  test-extract-dependencies-1.output  test-extract-dependencies-2.args  test-extract-dependencies-2.output  test-extract-dependencies-3.args  test-extract-dependencies-3.output  test-extract-dependencies-4.args  test-extract-dependencies-4.output  test-extract-dependents-1.args  test-extract-dependents-1.output  test-extract-dependents-2.args  test-extract-dependents-2.output  test-extract-dependents-3.args  test-extract-dependents-3.output  test-extract-dependents-4.args  test-extract-description-1.args  test-extract-description-1.output  test-extract-description-2.args  test-extract-description-2.output  test-extract-filelist-1.args  test-extract-filelist-1.output  test-extract-filelist-2.args  test-extract-filelist-2.output  (+62 more)
test-programs/: README  sh-features  stdioext-flags.c
test-programs/pthread-rwlock/: README  foo.c  foo.sh  results.txt  rwlock-analyze.sh
test-programs/pthread-rwlock/outputs/: rwlock-aix-1  rwlock-aix-2  rwlock-android-1  rwlock-android-2  rwlock-cygwin-1  rwlock-cygwin-2  rwlock-freebsd-1  rwlock-freebsd-2  rwlock-glibc-hurd-2  rwlock-glibc-linux-2.17-default-1  rwlock-glibc-linux-2.17-default-2  rwlock-glibc-linux-2.17-prefer_writer-1  rwlock-musl-2  (+45 more)
test-programs/rwlock-type/: test-pthread-rwlock-type.c  test-windows-rwlock-type.c  test-windows-timedrwlock-type.c
used-modules/: 4ti2  CSSC  OATH  acct  ale  amanda  augeas  autobuild  barcode  binfmt-support  bison  cgminer  clisp  cmogstored  collectd  complexity  coreutils  cpio  cvs  datamash  dc3dd  dico  diffutils  emacs  enchant-2  febootstrap  findutils  freedink  fuse-overlayfs  gawk  gcal  gdb  gengetopt  gettext  gmediaserver  gnuit  gnutls  grep  groff  grub  (+68 more)
(+2336 files in other folders)
