## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += assert_h.m4
EXTRA_DIST += c-bool.m4
EXTRA_DIST += codeset.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += exponentd.m4
EXTRA_DIST += exponentf.m4
EXTRA_DIST += exponentl.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += fcntl-o.m4
EXTRA_DIST += fcntl_h.m4
EXTRA_DIST += fdopen.m4
EXTRA_DIST += float_h.m4
EXTRA_DIST += fpieee.m4
EXTRA_DIST += free.m4
EXTRA_DIST += frexp.m4
EXTRA_DIST += frexpl.m4
EXTRA_DIST += fsync.m4
EXTRA_DIST += getpagesize.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += host-cpu-c-abi.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += intmax_t.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += inttypes_h.m4
EXTRA_DIST += isatty.m4
EXTRA_DIST += isnand.m4
EXTRA_DIST += isnanf.m4
EXTRA_DIST += isnanl.m4
EXTRA_DIST += ldexpl.m4
EXTRA_DIST += lib-ld.m4
EXTRA_DIST += lib-link.m4
EXTRA_DIST += lib-prefix.m4
EXTRA_DIST += libtextstyle-optional.m4
EXTRA_DIST += libtextstyle.m4
EXTRA_DIST += limits-h.m4
EXTRA_DIST += locale-fr.m4
EXTRA_DIST += locale-ja.m4
EXTRA_DIST += locale-zh.m4
EXTRA_DIST += math_h.m4
EXTRA_DIST += mbrtowc.m4
EXTRA_DIST += mbstate_t.m4
EXTRA_DIST += memchr.m4
EXTRA_DIST += mmap-anon.m4
EXTRA_DIST += msvc-inval.m4
EXTRA_DIST += msvc-nothrow.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += musl.m4
EXTRA_DIST += nan-mips.m4
EXTRA_DIST += nocrash.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += pipe.m4
EXTRA_DIST += printf-frexp.m4
EXTRA_DIST += printf-frexpl.m4
EXTRA_DIST += printf.m4
EXTRA_DIST += signbit.m4
EXTRA_DIST += size_max.m4
EXTRA_DIST += snan.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += std-gnu11.m4
EXTRA_DIST += stdalign.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdint_h.m4
EXTRA_DIST += stdio_h.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += string_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += vasnprintf.m4
EXTRA_DIST += vasprintf-posix.m4
EXTRA_DIST += vasprintf.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_h.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += xsize.m4
EXTRA_DIST += zzgnulib.m4
